<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/bg_signup"
    tools:context="com.example.ettam.helloworld.LoginActivity">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/hint_email"
        android:textColorHint="@color/hint"
        android:ems="10"
        android:layout_marginTop="65dp"
        android:textColor="@color/white"
        android:id="@+id/email"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/pwd"
        android:layout_alignStart="@+id/pwd" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:hint="@string/hint_pwd"
        android:textColorHint="@color/hint"
        android:ems="10"
        android:layout_marginTop="54dp"
        android:id="@+id/pwd"
        android:layout_below="@+id/email"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/btn_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:id="@+id/register"
        android:background="@color/colorAccent"
        android:textColor="@color/white"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/pwd"
        android:layout_alignStart="@+id/pwd"
        android:layout_marginBottom="92dp" />

    <Button
        android:text="@string/btn_lgn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Login"
        android:background="@color/bg_sign"
        android:textColor="@color/white"
        android:layout_below="@+id/pwd"
        android:layout_marginTop="39dp"
        android:layout_alignRight="@+id/pwd"
        android:layout_alignEnd="@+id/pwd"
        android:layout_alignLeft="@+id/pwd"
        android:layout_alignStart="@+id/pwd" />

    <Button
        android:text="@string/btn_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        android:background="@color/bg_pwd"
        android:textColor="@color/white"
        android:layout_toRightOf="@+id/register"
        android:layout_toEndOf="@+id/register"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_alignBottom="@+id/register"
        android:layout_alignTop="@+id/register" />

</RelativeLayout>
